bugfix dropdowns offscreen

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -97,6 +97,6 @@ input[type=submit] {
 .dropdown-menu {
 	left: 0%;
 	top: 0%;
-	max-height: 250px;
+	max-height: 150px;
 	overflow-x: hidden;
 }
